--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="CSS/style.css">
+        <meta charset="UTF-8">
+        <title>Digital Clock</title>
+    </head>
+     <body>
+       
+    <div id="clock">00:00:00</div>
+<div class="btn">
+  <div id="twelveHour">
+      <button id='btn'>12 Hour</button>     
+        <div id="twentyFourHour">
+          <button id='btn'>24 Hour</button>
+         </div>     
+    </body>
+    <script src="JS/main.js"></script>
+</html>
